--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -100,4 +100,59 @@
             height: 7rem;
         }
     }
+
+    &__career {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &-section {
+            width: 90%;
+            margin: 3rem;
+            padding: 2rem;
+            background-color: v.$anaranjado;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &-titule {
+            text-align: center;
+            margin-top: 20rem;
+            font-size: 5rem;
+        }
+
+        &-titules {
+            font-size: 5rem;
+            margin: .5rem;
+            font-weight: 700;
+            color: v.$black;
+        }
+        
+        &-title {
+            font-size: 2.5rem;
+            color: v.$white;
+            font-weight: 600;
+            margin: 1rem 0;
+        }
+
+        &-company {
+            @extend .aboutme__career-title;
+            font-size: 3rem;
+        }
+
+        &-duration {
+            @extend .aboutme__career-title;
+            font-size: 2rem;
+        }
+
+        &-list {
+            display: flex;
+            width: 100%;
+            list-style: none;
+            justify-content: center;
+            padding: 0;
+            background-color: v.$marron;
+        }
+    }
 }
