--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -26,7 +26,7 @@ img {
 
 .btnGeneral {
     @include m.boton(v.$anaranjado, v.$black);
-    margin: 3rem;
+    margin: 1rem 3rem 3rem;
     box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     font-size: 2.5rem;
 
