--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -8,27 +8,29 @@
         align-items: center;
         display: flex;
         flex-direction: column-reverse;
+        margin: 0 1rem;
         
         @include m.desktop {
             flex-direction: row;
+            margin: 0 2rem;
         }
 
         &-foto {
-            min-width: 40rem;
+            width: auto;
             min-height: 40rem;
-            max-width: 40rem;
             max-height: 40rem;
-            margin: 3rem;
+            margin: 2rem;
 
-            & img {
-                width: 100%;
-                height: 100%;
+            &--img {
+                width: auto;
+                min-height: 40rem;
+                max-height: 40rem;
             }
         }
     
         &-info {
             text-align: left;
-            margin: 3rem;
+            margin: 2rem;
             width: 80%;
         }
     }
@@ -178,6 +180,7 @@
         &-company {
             @extend .aboutme__career-title;
             font-size: 3rem;
+            text-align: center
         }
 
         &-duration {
